@@ -13,7 +13,7 @@
 .sp
 \fBpackage require Tcl 8.4\fR
 .sp
-\fBpackage require vfs ?1.2?\fR
+\fBpackage require vfs ?1.2.1?\fR
 .sp
 \fBpackage require vfs::zip ?1.0?\fR
 .sp
