@@ -25,7 +25,7 @@ proc loadvfs {dll} {
     load $dll
 }
 
-package ifneeded vfs          1.0 [list loadvfs $vfs::dll]
+package ifneeded vfs          1.2.1 [list loadvfs $vfs::dll]
 package ifneeded starkit      1.2 [list source [file join $dir starkit.tcl]]
 package ifneeded vfslib     1.3.1 [list source [file join $dir vfslib.tcl]]
 
